first updateRecodeDB implementation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(createRecodeDB)
 export(getRecodeDB)
 export(getRecodeList)
 export(namesRecodeDB)
+export(updateRecodeDB)
 export(useRecodeList)
