--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,11 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Imports: eatTools (>= 0.7.5), writexl, readxl
+Imports: 
+    eatTools (>= 0.7.5),
+    writexl,
+    readxl,
+    checkmate
 Suggests: 
     covr,
     testthat (>= 3.0.0)
