--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+Depends:
+    R (>= 4.0.0)
 Imports: 
     eatTools (>= 0.7.5),
     writexl,
